--- a/DIW/Practica1/css/style.css
+++ b/DIW/Practica1/css/style.css
@@ -1,53 +1,52 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
 }
-.bold{
- font-weight: 600;
- font-style: italic;
- 
-}
 
+.bold {
+    font-weight: 600;
+    font-style: italic;
+}
 
 body {
     display: grid;
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
 }
 
-header{
+/*index*/
+header {
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-bottom: 120px;
-   
 }
-header h1{
-    
-    color: rgb(240,93,80);
+
+header h1 {
+
+    color: rgb(240, 93, 80);
     margin: 25px 25px;
 
 }
-header h1:hover{
-    color: rgba(240,93,80,0.5);
+
+header h1:hover {
+    color: rgba(240, 93, 80, 0.5);
 }
 
-header li{
-  list-style: none;  
+#header-index li {
+    list-style: none;
 }
 
-header ul{
+#header-index ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 4px;
-}li a:active{
-    color: #c4b8b8; /* Color del texto después de visitar el enlace */
 }
