--- a/DIW/Practica1/css/style.css
+++ b/DIW/Practica1/css/style.css
@@ -10,7 +10,7 @@ a {
 }
 
 .bold {
-    font-weight: 600;
+    font-weight: 700;
     font-style: italic;
 }
 
@@ -25,11 +25,11 @@ header {
     flex-direction: column;
     align-items: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-bottom: 120px;
+    margin-bottom: 35px;
+
 }
 
 header h1 {
-
     color: rgb(240, 93, 80);
     margin: 25px 25px;
 
@@ -39,14 +39,133 @@ header h1:hover {
     color: rgba(240, 93, 80, 0.5);
 }
 
-#header-index li {
+header li {
     list-style: none;
 }
 
-#header-index ul {
+header ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 4px;
+}
+
+header a {
+    color: rgb(0, 0, 25);
+}
+
+header a:hover {
+    color: rgba(0, 0, 25, 0.5);
+}
+
+.main-index {
+    font-family: Arial, Helvetica, sans-serif;
+
+    display: grid;
+    grid-template-columns: 0.5fr 2.1fr 0.5fr;
+}
+
+.main-index p {
+    color: rgb(0, 0, 25);
+}
+
+.main-index cite {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.main-index a {
+    color: rgb(240, 93, 80);
+
+}
+
+.main-index a:hover {
+    color: rgba(240, 93, 80, 0.5);
+}
+
+.main-index article {
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section #name-awarded {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16px;
+}
+
+section #award-description {
+    text-align: center;
+    line-height: 1.3;
+    max-width: 550px;
+    margin-bottom: 16px;
+}
+
+#info-cronist {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 36px;
+}
+
+figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+    margin-bottom: 30px;
+}
+
+figcaption {
+    text-align: center;
+    font-size: 12px;
+}
+
+img {
+    max-width: 100%;
+}
+
+#opinion {
+
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+}
+
+#opinion p {
+    max-width: 60%;
+    margin-bottom: 25px;
+}
+
+#cuerpo h2 {
+    margin-bottom: 12px;
+    margin-top: 12px;
+}
+
+#cuerpo #multimedia {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 12px;
+    gap: 15px;
+
+}
+
+#cuerpo p {
+    margin-bottom: 10px;
+}
+
+#discurso {
+    font-size: 20.2px;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+#discurso p:last-of-type {
+    font-size: small;
 }
