--- a/DIW/Practica1/css/style.css
+++ b/DIW/Practica1/css/style.css
@@ -1,3 +1,13 @@
+:root {
+    --font-principal: Arial, Helvetica, sans-serif;
+    --font-header: Georgia, 'Times New Roman', Times, serif;
+    --font-cites: Georgia, 'Times New Roman', Times, serif;
+    --text-color-principal: rgb(0, 0, 25);
+    --color-a-index: rgb(240, 93, 80);
+    --color-a-hoover: rgba(240, 93, 80, 0.5);
+}
+
+/*eliminar propiedades por defecto*/
 * {
     padding: 0;
     margin: 0;
@@ -9,22 +19,23 @@ a {
     color: inherit;
 }
 
-.bold {
+/*eliminar propiedades por defecto*/
+
+
+/*item activo barra de navegación*/
+#nav-item-bold {
     font-weight: 700;
     font-style: italic;
 }
 
-body {
-    display: grid;
-    grid-template-columns: 1fr;
-}
+
 
 /*index*/
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: var(--font-header);
     margin-bottom: 35px;
 
 }
@@ -32,11 +43,15 @@ header {
 header h1 {
     color: rgb(240, 93, 80);
     margin: 25px 25px;
-
 }
 
-header h1:hover {
-    color: rgba(240, 93, 80, 0.5);
+header h1 a {
+    color: var(--color-a-index);
+}
+
+header h1 a:hover {
+    color: var(--color-a-hoover);
+
 }
 
 header li {
@@ -60,27 +75,33 @@ header a:hover {
 }
 
 .main-index {
-    font-family: Arial, Helvetica, sans-serif;
+    width: 95%;
+    max-width: 1240px;
+    margin: 0 auto;
+    padding-bottom: 60px;
+    font-family: var(--font-principal);
 
     display: grid;
     grid-template-columns: 0.5fr 2.1fr 0.5fr;
 }
 
 .main-index p {
-    color: rgb(0, 0, 25);
+    color: var(--text-color-principal);
 }
 
+
+
 .main-index cite {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: var(--font-cites);
+    color: brown;
 }
 
 .main-index a {
-    color: rgb(240, 93, 80);
-
+    color: var(--color-a-index);
 }
 
 .main-index a:hover {
-    color: rgba(240, 93, 80, 0.5);
+    color: var(--color-a-hoover);
 }
 
 .main-index article {
@@ -100,8 +121,8 @@ section #name-awarded {
 
 section #award-description {
     text-align: center;
-    line-height: 1.3;
-    max-width: 550px;
+    line-height: 1.8;
+    max-width: 650px;
     margin-bottom: 16px;
 }
 
@@ -128,18 +149,20 @@ figcaption {
 
 img {
     max-width: 100%;
+    min-width: 100%;
 }
 
 #opinion {
 
     display: flex;
-    flex-direction: row;
-    align-items: start;
+    width: 100%;
+    justify-content: flex-start;
 }
 
 #opinion p {
-    max-width: 60%;
-    margin-bottom: 25px;
+    width: 625px;
+    font-weight: bolder;
+    line-height: 1.8;
 }
 
 #cuerpo h2 {
@@ -157,7 +180,9 @@ img {
 }
 
 #cuerpo p {
-    margin-bottom: 10px;
+    min-width: 1080px;
+    margin-bottom: 20px;
+    line-height: 1.3;
 }
 
 #discurso {
