--- a/DIW/Practica1/css/style.css
+++ b/DIW/Practica1/css/style.css
@@ -1,196 +1,198 @@
 :root {
-    --font-principal: Arial, Helvetica, sans-serif;
-    --font-header: Georgia, 'Times New Roman', Times, serif;
-    --font-cites: Georgia, 'Times New Roman', Times, serif;
-    --text-color-principal: rgb(0, 0, 25);
-    --color-a-index: rgb(240, 93, 80);
-    --color-a-hoover: rgba(240, 93, 80, 0.5);
+  --font-principal: Arial, Helvetica, sans-serif;
+  --font-header: Georgia, "Times New Roman", Times, serif;
+  --font-cites: Georgia, "Times New Roman", Times, serif;
+  --text-color-principal: rgb(0, 0, 25);
+  --color-fondo-footer: rgb(0, 0, 25);
+  --color-a-index: rgb(240, 93, 80);
+  --color-a-hoover: rgba(240, 93, 80, 0.5);
+  --color-footer: rgb(255, 255, 255);
+  --color-enlace-menu-principal: rgb(0, 0, 25);
+  --color-hoover-menu-principal: rgba(0, 0, 25, 0.5);
 }
 
 /*eliminar propiedades por defecto*/
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
-
 /*eliminar propiedades por defecto*/
 
-
 /*item activo barra de navegación*/
-#nav-item-bold {
-    font-weight: 700;
-    font-style: italic;
-}
 
-
-
-/*index*/
+/*Barra de navegación*/
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: var(--font-header);
-    margin-bottom: 35px;
-
+  min-width: 1240px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: var(--font-header);
+  margin-bottom: 35px;
 }
 
 header h1 {
-    color: rgb(240, 93, 80);
-    margin: 25px 25px;
+  color: rgb(240, 93, 80);
+  margin: 25px 25px;
 }
 
 header h1 a {
-    color: var(--color-a-index);
+  color: var(--color-a-index);
 }
 
 header h1 a:hover {
-    color: var(--color-a-hoover);
-
+  color: var(--color-a-hoover);
 }
 
 header li {
-    list-style: none;
+  list-style: none;
 }
-
 header ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
-
 header a {
-    color: rgb(0, 0, 25);
+  color: var(--color-enlace-menu-principal);
 }
-
 header a:hover {
-    color: rgba(0, 0, 25, 0.5);
+  color: var(--color-hoover-menu-principal);
 }
+#nav-item-bold {
+  font-weight: 700;
+  font-style: italic;
+}
+/*Hasta aquí barra de navegación*/
 
+/*Main index*/
 .main-index {
-    width: 95%;
-    max-width: 1240px;
-    margin: 0 auto;
-    padding-bottom: 60px;
-    font-family: var(--font-principal);
-
-    display: grid;
-    grid-template-columns: 0.5fr 2.1fr 0.5fr;
+  width: 95%;
+  max-width: 1240px;
+  margin: 0 auto;
+  padding-bottom: 60px;
+  font-family: var(--font-principal);
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 0.5fr;
 }
-
 .main-index p {
-    color: var(--text-color-principal);
+  color: var(--text-color-principal);
 }
-
-
-
 .main-index cite {
-    font-family: var(--font-cites);
-    color: brown;
+  font-family: var(--font-cites);
 }
-
 .main-index a {
-    color: var(--color-a-index);
+  color: var(--color-a-index);
 }
-
 .main-index a:hover {
-    color: var(--color-a-hoover);
+  color: var(--color-a-hoover);
 }
-
 .main-index article {
-    grid-column: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 section #name-awarded {
-    font-size: 40px;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 16px;
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
 }
-
 section #award-description {
-    text-align: center;
-    line-height: 1.8;
-    max-width: 650px;
-    margin-bottom: 16px;
+  font-size: 18px;
+  text-align: center;
+  line-height: 1.8;
+  max-width: 650px;
+  margin-bottom: 16px;
 }
-
 #info-cronist {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 36px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 36px;
 }
-
 figure {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 18px;
-    margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 18px;
+  margin-bottom: 30px;
 }
-
 figcaption {
-    text-align: center;
-    font-size: 12px;
+  text-align: center;
+  font-size: 12px;
 }
-
 img {
-    max-width: 100%;
-    min-width: 100%;
+  max-width: 100%;
+  min-width: 100%;
 }
-
 #opinion {
-
-    display: flex;
-    width: 100%;
-    justify-content: flex-start;
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
 }
-
 #opinion p {
-    width: 625px;
-    font-weight: bolder;
-    line-height: 1.8;
+  width: 625px;
+  font-size: 16px;
+  font-weight: bolder;
+  line-height: 1.8;
 }
-
 #cuerpo h2 {
-    margin-bottom: 12px;
-    margin-top: 12px;
+  margin-bottom: 12px;
+  margin-top: 12px;
 }
-
 #cuerpo #multimedia {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 12px;
-    gap: 15px;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12px;
+  gap: 15px;
 }
-
 #cuerpo p {
-    min-width: 1080px;
-    margin-bottom: 20px;
-    line-height: 1.3;
+  font-size: 14px;
+  min-width: 1080px;
+  margin-bottom: 20px;
+  line-height: 1.3;
 }
-
 #discurso {
-    font-size: 20.2px;
-    padding-left: 35px;
-    padding-right: 35px;
+  margin-bottom: 20px;
 }
+#discurso p {
+  font-size: 20px;
+  padding-left: 35px;
+  padding-right: 35px;
+  margin-bottom: 4px;
+}
+#discurso p em {
+  font-size: 14px;
+  font-weight: 500;
+}
+#last-p {
+  /* Tus estilos aquí */
+  margin-top: 45px;
+}
+/*hasta aquí main-index*/
 
-#discurso p:last-of-type {
-    font-size: small;
+/*main-listado*/
+
+/*hasta aquí main listado*/
+
+footer {
+  height: 75px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-fondo-footer);
+  color: var(--color-footer);
 }
