--- a/DIW/Practica1/css/style.css
+++ b/DIW/Practica1/css/style.css
@@ -9,6 +9,7 @@
   --color-footer: rgb(255, 255, 255);
   --color-enlace-menu-principal: rgb(0, 0, 25);
   --color-hoover-menu-principal: rgba(0, 0, 25, 0.5);
+  --color-ano-lista-descriptiva: rgba(0, 0, 25, 0.5);
 }
 
 /*eliminar propiedades por defecto*/
@@ -22,6 +23,16 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+a {
+  color: var(--color-a-index);
+}
+
+a:hover {
+  color: var(--color-a-hoover);
+}
+
+
 /*eliminar propiedades por defecto*/
 
 /*item activo barra de navegación*/
@@ -52,6 +63,7 @@ header h1 a:hover {
 header li {
   list-style: none;
 }
+
 header ul {
   display: flex;
   flex-direction: column;
@@ -59,67 +71,71 @@ header ul {
   align-items: center;
   gap: 4px;
 }
+
 header a {
   color: var(--color-enlace-menu-principal);
 }
+
 header a:hover {
   color: var(--color-hoover-menu-principal);
 }
+
 #nav-item-bold {
   font-weight: 700;
   font-style: italic;
 }
+
 /*Hasta aquí barra de navegación*/
 
 /*Main index*/
 .main-index {
+  color: var(--text-color-principal);
   width: 95%;
   max-width: 1240px;
   margin: 0 auto;
   padding-bottom: 60px;
   font-family: var(--font-principal);
   display: grid;
-  grid-template-columns: 0.5fr 2fr 0.5fr;
+  grid-template-columns: 1fr;
 }
-.main-index p {
-  color: var(--text-color-principal);
-}
+
+
+
 .main-index cite {
   font-family: var(--font-cites);
 }
-.main-index a {
-  color: var(--color-a-index);
-}
-.main-index a:hover {
-  color: var(--color-a-hoover);
-}
-.main-index article {
-  grid-column: 2;
+
+
+.main-index .articulo {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-section #name-awarded {
+
+#nombre-premiado {
   font-size: 40px;
   display: flex;
   justify-content: center;
   margin-bottom: 16px;
 }
-section #award-description {
+
+#premio-descripcion {
   font-size: 18px;
   text-align: center;
   line-height: 1.8;
   max-width: 650px;
   margin-bottom: 16px;
 }
-#info-cronist {
+
+#info-cronista {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   margin-bottom: 36px;
 }
+
 figure {
   display: flex;
   flex-direction: column;
@@ -127,64 +143,76 @@ figure {
   gap: 18px;
   margin-bottom: 30px;
 }
+
 figcaption {
   text-align: center;
   font-size: 12px;
 }
+
 img {
   max-width: 100%;
   min-width: 100%;
 }
+
 #opinion {
   display: flex;
   width: 100%;
   justify-content: flex-start;
 }
+
 #opinion p {
   width: 625px;
   font-size: 16px;
   font-weight: bolder;
   line-height: 1.8;
 }
+
 #cuerpo h2 {
   margin-bottom: 12px;
   margin-top: 12px;
 }
-#cuerpo #multimedia {
+
+#multimedia {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 12px;
   gap: 15px;
 }
+
 #cuerpo p {
   font-size: 14px;
   min-width: 1080px;
   margin-bottom: 20px;
   line-height: 1.3;
 }
+
 #discurso {
   margin-bottom: 20px;
 }
+
 #discurso p {
   font-size: 20px;
   padding-left: 35px;
   padding-right: 35px;
   margin-bottom: 4px;
 }
+
 #discurso p em {
+  font-size: 20px;
+
+}
+
+#discurso p:last-of-type em {
   font-size: 14px;
   font-weight: 500;
 }
+
 #last-p {
-  /* Tus estilos aquí */
   margin-top: 45px;
 }
+
 /*hasta aquí main-index*/
-
-/*main-listado*/
-
-/*hasta aquí main listado*/
 
 footer {
   height: 75px;
@@ -195,4 +223,55 @@ footer {
   align-items: center;
   background-color: var(--color-fondo-footer);
   color: var(--color-footer);
+}
+
+
+/*motivacion premios*/
+.main-motivacion-premios {
+  width: 95%;
+  min-width: 1240px;
+
+  margin: 0 auto;
+  padding-bottom: 60px;
+  font-family: var(--font-principal);
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
+}
+
+.cabecera-motivación-premios {
+  grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+
+.cabecera-motivación-premios h2 {
+  font-size: 32px;
+}
+
+.lista-motivacion {
+  grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.lista-motivacion a {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.lista-motivacion dd {
+  margin-left: 25px;
+  line-height: 1.8;
+}
+
+.lista-motivacion-ano {
+  font-weight: 600;
+  font-size: large;
+  color: var(--color-ano-lista-descriptiva);
 }
