--- a/DWC/Practica3.03/style.css
+++ b/DWC/Practica3.03/style.css
@@ -17,7 +17,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;
+
 }
 
 .main {
@@ -31,18 +31,23 @@ header {
 
 
 .main__formulario form {
-    border: 1px solid darkblue;
     display: flex;
+    padding: 5px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 25px;
+    gap: 12px;
 }
 
 .main__formulario form textarea {
     width: 500px;
     height: 200px;
     margin-top: 45px;
+    border: 1px solid #333;
+    border-radius: 5px;
+    padding: 14px;
+    font-size: 14px;
+    font-weight: 700;
 }
 
 .main__listas {
@@ -50,28 +55,37 @@ header {
     grid-template-columns: 1fr 1fr;
 }
 
-.boton {
+button {
+    color: white;
+    width: 90px;
+    background-color: rgb(7, 85, 103);
     border: none;
-    padding: 18px;
-    border-radius: 6px;
-    background-color: rgb(80, 116, 27);
+    padding: 8px 12px;
+    margin-right: 10px;
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
 }
 
-.boton:hover {
-    scale: 1.2;
+
+
+button:hover {
+    background-color: rgb(78, 116, 125);
 }
 
-.tarea-archivada {
-    background-color: red;
-}
 
 #div-do,
 #div-todo {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+
 }
+
+
 
 .ocultar {
     visibility: hidden;
@@ -79,7 +93,34 @@ header {
 }
 
 .tarea-todo {
-    width: 450px;
-    height: 18vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
 
+}
+
+
+.tarea-todo p {
+    font-size: 16px;
+    color: #333;
+    padding: 7px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    width: 100%;
+
+}
+
+
+
+
+.tarea-archivada {
+    background-color: green;
 }
