React-router-dom creado componente menú

--- a/DWC/Practica3.06/interfaces-react-dom/src/css/app.css
+++ b/DWC/Practica3.06/interfaces-react-dom/src/css/app.css
@@ -26,8 +26,8 @@ header {
     width: 100%;
     background-color: #444;
     color: #ccc;
-    height: 75px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
