--- a/DWC/Practica3.06/interfaces-react-dom/src/css/app.css
+++ b/DWC/Practica3.06/interfaces-react-dom/src/css/app.css
@@ -5,12 +5,13 @@
 }
 
 body {
-    width: 100%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #1a1a1a;
 }
 
 .container__app {
+    border-radius: 5px;
+    padding: 12px;
     margin: 0 auto;
     width: 95%;
     background-color: #333;
@@ -23,13 +24,15 @@ body {
 }
 
 header {
+    padding: 18px;
     width: 100%;
+    flex-direction: column;
     background-color: #444;
     color: #ccc;
     display: flex;
-    flex-direction: column;
+    gap: 25px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .contenedor-pelicula {
@@ -153,4 +156,159 @@ footer {
 
 .mostrar-elenco {
     display: block;
+}
+
+.contenedor-main {
+
+    display: flex;
+    justify-content: center;
+    min-height: 80vh;
+}
+
+.inicio {
+    background-image: url('../imagenes/cinema.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inicio h2 {
+    font-size: 60px;
+    color: #ddd;
+}
+
+.bar-nav-inicio,
+.submenu-peliculas,
+.submenu-galeria {
+    width: 85%;
+
+}
+
+
+.bar-nav-inicio ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.submenu-galeria ul,
+.submenu-peliculas ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+
+}
+
+
+.bar-nav-inicio a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    width: 120px;
+    border: 1px solid #808080;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+}
+
+.submenu-peliculas a,
+.submenu-galeria a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    width: 200px;
+    border: 1px solid #808080;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+}
+
+.bar-nav-inicio a:hover,
+.submenu-peliculas a:hover,
+.submenu-galeria a:hover {
+    background-color: rgb(101, 93, 93);
+}
+
+.peliculas {
+    margin-top: 5px;
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.container__app a {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 80%;
+    padding: 12px;
+    border: 1px solid #808080;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+}
+
+.galeria {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.lista-galeria {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 14px;
+}
+
+.item-galeria {
+    padding: 10px;
+    border: 1px solid #5c5959;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.item-galeria:hover {
+    background-color: #5c5959;
+}
+
+
+.item-galeria figure {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+}
+
+.item-galeria img {
+    width: 150px;
+    border-radius: 8px;
+}
+
+.item-galeria h2 {
+    color: white;
+    font-size: 35px;
+}
+
+.acercade {
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
 }
