--- a/DWC/Practica3.06/interfaces-react-dom/src/css/app.css
+++ b/DWC/Practica3.06/interfaces-react-dom/src/css/app.css
@@ -328,3 +328,10 @@ footer {
     align-items: center;
     gap: 16px;
 }
+
+.error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ddd;
+}
