--- a/DWC/Practica4.02/css/style.css
+++ b/DWC/Practica4.02/css/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 55px;
 }
 
 .pieza-puzzle {
@@ -17,10 +18,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 200.16px;
 
-    & img {
-        width: 60%;
-    }
+
 }
 
 #contenedor-piezas {
@@ -40,10 +40,16 @@ body {
 }
 
 .square {
+
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 244.16px;
+    height: 200.16px;
     border: 1px solid red;
+}
+
+img {
+    width: 120%;
+    height: 100%;
 }
