--- a/DWC/Practica4.03/css/style.css
+++ b/DWC/Practica4.03/css/style.css
@@ -69,13 +69,39 @@ header {
 
 }
 
+#btn-reset {
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#reset {
+    background-color: gray;
+    cursor: pointer;
+    width: 80%;
+    height: 80%;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#reset:hover {
+    scale: 1.03;
+
+}
+
 .tabla {
     padding: 7px;
+
     background-color: white;
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 footer {
+    display: flex;
     height: 5%;
+    justify-content: center;
+    align-items: center;
 }
