--- a/DIW/Practica2/css/estilos.css
+++ b/DIW/Practica2/css/estilos.css
@@ -1,21 +1,114 @@
-:root{
-    --imagen-fondo-indice: url("../img/home-hero.jpg");
+/*Work Sans de Google Fonts (weight 400 y 700, normal y cursiva).*/
+:root {
+    --color-fondos-cabecera-pie: #000000;
+    --color-hover-enlaces-header-pie: #6bdec8;
+
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-a{
-   text-decoration: none;
+
+body {
+    font-family: "Work Sans", sans-serif;
+
 }
 
-.body-index{
-    width: 100%;
-    height: 100%;
-    background-image: var(--imagen-fondo-indice); 
-    background-size: cover;
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+.contenedor-main {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.body-index {
+    height: 100vh;
+    background-image: url("../img/home-hero.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
+
+
+.index-header {
+    margin-top: 1.2rem;
+}
+
+.index-header__lista {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    height: 3.5rem;
+}
+
+.index-header__lista a {
+    color: #ffffff;
+    transition: 0.5 ease;
+}
+
+.index-main {
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.index-main__titulo {
+    font-weight: 700;
+    font-size: 8rem;
+    letter-spacing: -0.7rem;
+}
+
+.index-main__grupo {
+    text-align: center;
+}
+
+.index-main__parrafo {
+    font-size: 2.5rem;
+    letter-spacing: 0.5rem;
+}
+
+.index-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    gap: .5rem;
+    margin-bottom: 1.2rem;
+}
+
+.index-footer__lista {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.index-footer a {
+    color: #ffffff;
+    transition: 0.5ms ease;
+}
+
+.body-index a:hover {
+    color: var(--color-hover-enlaces-header-pie);
+}
+
+/*hasta aqui el indice */
