--- a/DIW/Practica2/css/estilos.css
+++ b/DIW/Practica2/css/estilos.css
@@ -187,7 +187,7 @@ li {
 /*que es la cerámica*/
 .body-ceramica,
 .body-cursos,
-.body.inscripcion {
+.body-inscripcion {
     min-width: 960px;
 }
 
@@ -361,12 +361,14 @@ li {
     font-size: 0.7rem;
 }
 
-.cursos-main__cabecera__figcaption a {
+.cursos-main__cabecera__figcaption a,
+.inscripcion-main__formulario__proteccion-datos__info__enlace {
     color: var(--color-enlace-textos);
     border-bottom: 1px dotted var(--color-enlace-textos);
 }
 
-.cursos-main__cabecera__figcaption a:hover {
+.cursos-main__cabecera__figcaption a:hover,
+.inscripcion-main__formulario__proteccion-datos__info__enlace:hover {
     border-bottom: 1px solid var(--color-enlace-textos);
 }
 
@@ -420,4 +422,113 @@ li {
 .cursos-main__table__body__celda__footer {
     font-size: 0.7rem;
     padding: 0.7rem;
+}
+
+/*inscripción*/
+.inscripcion-main {
+    width: 65%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inscripcion-main__titulo {
+    padding: 2rem;
+}
+
+
+
+.inscripcion-main__formulario__campo-detalles__cabecera,
+.inscripcion-main__formulario__campo-pagos__cabecera,
+.inscripcion-main__formulario__campo-otras-informaciones__cabecera,
+.inscripcion-main__formulario__campo-otras-informaciones__campo-interior__cabecera {
+    margin-left: 0.8rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.inscripcion-main__formulario__campo-otras-informaciones__campo-interior__div {
+    padding: 2rem;
+
+}
+
+.inscripcion-main__formulario {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 3rem;
+}
+
+.inscripcion-main__formulario__detalles {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 2rem;
+    gap: 0.7rem;
+
+}
+
+.inscripcion-main__formulario__detalles__seccion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.8rem;
+
+}
+
+.inscripcion-main__formulario__input {
+    width: 100%;
+    height: 2.5rem;
+}
+
+
+.inscripcion-main__formulario__campo-otras-informaciones__campo-interior__radios__radio {
+    padding: 0.8rem;
+}
+
+.inscripcion-main__formulario__campo-otras-informaciones__comentarios {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.inscripcion-main__formulario__campo-otras-informaciones__comentarios__label {
+    padding: 1rem 0;
+}
+
+.inscripcion-main__formulario__campo-otras-informaciones__comentarios__text-area {
+    height: 7rem;
+}
+
+.inscripcion-main__formulario__campo-otras-informaciones__pago {
+    padding: 1rem 0;
+}
+
+.inscripcion-main__formulario__campo-otras-informaciones__pago__tipo {
+    padding-left: 2rem;
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+}
+
+.inscripcion-main__formulario__proteccion-datos {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+.inscripcion__formulario__input {
+    cursor: pointer;
+    color: #ffffff;
+    width: 7rem;
+    height: 2rem;
+    border: none;
+    background-color: var(--color-enlace-textos);
+    transition: 0.5ms ease;
+
+}
+
+.inscripcion__formulario__input:hover {
+    background-color: gray;
 }
