--- a/EEIE/Proyecto/WebMarketingRMA/style.css
+++ b/EEIE/Proyecto/WebMarketingRMA/style.css
@@ -103,3 +103,24 @@ footer {
     padding: 15px 0;
     margin-top: 20px;
 }
+
+main h3 {
+    font-size: 20px;
+    color: #333;
+    margin-top: 20px;
+}
+
+main h4 {
+    font-size: 18px;
+    color: #333;
+    margin-top: 15px;
+}
+
+main p {
+    font-size: 16px;
+    color: #555;
+}
+
+main p strong {
+    font-weight: bold;
+}
