--- a/DIW/Practica3/css/style.css
+++ b/DIW/Practica3/css/style.css
@@ -118,17 +118,7 @@ body {
         gap: 1rem;
     }
 
-    .section-info {
-        /*Pruebas de centrado ... */
-        display: flex;
-        flex-direction: column;
 
-        width: 70%;
-        gap: 0;
-        margin: 0 auto;
-        /*Pruebas de centrado ... */
-
-    }
 }
 
 .footer {
@@ -265,32 +255,154 @@ body {
     }
 }
 
+/*info*/
+
 .section-info {
     display: flex;
-    padding: 0 1rem;
+    padding: 0 1.2rem;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 }
 
+
+
 .section-info__h2 {
-    padding: 1rem 0;
+    width: 100%;
+    text-align: center;
+    padding: 1.8rem 0;
+    font-size: 2rem;
 }
 
 .section-info__parrafo:last-of-type {
-    margin-top: 0.6rem;
+    margin-top: 0.8rem;
 }
+
 
 @media(min-width: 768px) {
     .section-info {
-        font-size: 1.3rem;
+        padding: 0 2.5rem;
+        font-size: 1.5rem;
+        gap: 0;
+        margin: 0 auto;
+    }
+
+    .section-info__h2 {
+        font-size: 2.5rem;
+    }
+
+}
+
+@media(min-width:1024px) {
+    .section-info {
+        width: 70%;
+        padding: 0 1.5rem;
+        font-size: 1.8rem;
+    }
+
+    .section-info__h2 {
+        font-size: 2.5rem;
     }
 }
 
+/*articulos*/
+.section-articulos {
+    padding: 0 2.2rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+}
+
+.section-articulos__articulo {
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.section-articulos__articulo:last-of-type {
+    margin-bottom: 3rem;
+
+}
+
+.section-articulos__titulo {
+    padding: 1.8rem 0;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.section-articulos__articulo__figure__img {
+    width: 100%;
+}
+
+.section-articulos__articulo__figure__figcaption {
+    margin-top: 1rem;
+}
+
+.section-articulos__articulo__titulo {
+    color: var(--color-contraste);
+    font-size: 1.6rem;
+    line-height: 1.7rem;
+}
+
+.section-articulos__articulo__titulo:hover {
+    color: var(--color-hover-enlace-texto);
+
+}
+
+.section-articulos__articulo__leermas {
+    font-weight: 700;
+    color: var(--color-enlace-texto);
+
+    span {
+        font-weight: 400;
+    }
+}
+
+.section-articulos__articulo__parrafo-info,
+.section-articulos__articulo__leermas {
+    font-size: 0.9rem;
+}
 
 
+.section-articulos__articulo__leermas:hover {
+    color: var(--color-hover-enlace-texto);
+}
 
+@media(min-width:768px) {
+    .section-articulos {
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
 
-img {
-    width: 85px;
+    .section-articulos__titulo {
+        grid-column: span 4;
+    }
+
+    .section-articulos__articulo__parrafo-info,
+    .section-articulos__articulo__leermas {
+        font-size: 1.2rem;
+    }
+
+    .section-articulos__articulo {
+        margin-bottom: 3.5rem;
+    }
+
+    .section-articulos__articulo:last-of-type {
+        margin-bottom: 3.5rem;
+    }
+}
+
+@media(min-width:1024px) {
+    .section-info {
+        width: 50%;
+    }
+
+    .section-articulos {
+        width: 70%;
+        height: 100%;
+        margin: 0 auto;
+        padding: 0;
+    }
 }
