--- a/DIW/Practica3/css/style.css
+++ b/DIW/Practica3/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --color-texto: #000000;
     --color-texto-menu-navegacion: #000000;
+    
     --opacidad-hover--logo: 0.5;
     --opacidad-hover--enlaces-menu-navegacion: 0.5;
     --color-contraste: #DE2333;
@@ -11,6 +12,7 @@
     --color-hover-enlace-footer: rgb(222, 35, 51);
     --opacidad-logo-redes: 0.7;
     --color-enlace-texto: rgb(222, 35, 51);
+    --color-hover-enlacenav: #000000;
     --color-hover-enlace-texto: rgb(0, 0, 0);
 }
 
@@ -67,7 +69,7 @@ body {
 .header__nav {
     position: sticky;
     top: 0;
-
+    border-bottom: 1px solid rgba(211, 211, 211, 0.5);
     background-color: var(--color-textos-fondo-negro);
     padding: 1rem 0 1rem 0;
 }
@@ -98,8 +100,20 @@ body {
 }
 
 .header__nav-item:hover {
+    color: var(--color-hover-enlacenav);
     opacity: var(--opacidad-hover--enlaces-menu-navegacion);
 }
+#header__nav-item-activo{
+    color: var(--color-enlace-actual);
+}
+#header__nav-item-activo:hover{
+    color: var(--color-hover-enlacenav);
+    opacity: var(--opacidad-hover--enlaces-menu-navegacion);
+
+}
+
+
+    
 
 @media(min-width: 768px) {
     .header__titulo {
