Interfaces: practica 3 terminapa pendiente de repasar y documentación

--- a/DIW/Practica3/css/style.css
+++ b/DIW/Practica3/css/style.css
@@ -1,7 +1,6 @@
 :root {
     --color-texto: #000000;
     --color-texto-menu-navegacion: #000000;
-
     --opacidad-hover--logo: 0.5;
     --opacidad-hover--enlaces-menu-navegacion: 0.5;
     --color-contraste: #DE2333;
@@ -653,6 +652,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 .despacho__article-section hgroup {
@@ -696,6 +696,12 @@ body {
 
 }
 
+.despacho__article-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+}
+
 .despacho__article-footer-info-img {
     width: 60px;
     height: 60px;
@@ -735,4 +741,185 @@ body {
 
 .despacho__article-footer-info-lista-item:hover {
     color: var(--color-hover-enlace-texto);
+}
+
+.despacho__article-footer-info-h3 {
+    font-size: 1.3rem;
+}
+
+.despacho__formulario {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    font-size: 0.9rem;
+    padding: 1rem 0;
+
+}
+
+.despacho__formulario-titulo {
+    font-size: 1.8rem;
+}
+
+.despacho__formulario-campos {
+    font-size: 0.8rem;
+}
+
+.despacho__formulario-textarea {
+    border: none;
+    border-radius: 0;
+    background-color: var(--color-descripcion--apps);
+    width: 100%;
+    height: 100px;
+}
+
+.despacho__formulario-input {
+    border: none;
+    border-radius: 0;
+    background-color: var(--color-descripcion--apps);
+    width: 100%;
+    height: 1.5rem;
+}
+
+.despacho__formulario-label-enlace {
+    color: var(--color-enlace-texto);
+}
+
+.despacho__formulario-label-enlace:hover {
+    color: var(--color-hover-enlace-texto);
+}
+
+.despacho__formulario-boton {
+    border: none;
+    border-radius: 0;
+    padding: 0.5rem;
+    color: var(--color-textos-fondo-negro);
+    background-color: var(--color-contraste);
+    font-size: 0.7rem;
+}
+
+.despacho__aside {
+    width: 90%;
+    margin: 0 auto;
+    padding: 2rem 0;
+}
+
+.despacho__aside-article {
+    display: flex;
+    text-transform: uppercase;
+    flex-direction: row;
+    gap: 0.5rem;
+    border-bottom: dotted 1px rgb(164, 159, 159);
+    padding: 0.5rem;
+}
+
+.despacho__aside__article-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-size: 0.7rem;
+
+}
+
+.despacho__aside-img {
+    border-radius: 1000px;
+    width: 75px;
+    height: 75px;
+}
+
+.despacho__breadcrumbs-lista {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin: 0 auto;
+    padding: 2.5rem 0;
+    gap: 0.5rem;
+}
+
+.despacho__breadcrumbs-enlace-activo {
+    color: #DE2333;
+}
+
+@media(min-width:768px) {
+    .despacho__article-header__titulo {
+        font-size: 2.2rem;
+
+    }
+
+    .despacho__article-header__figcaption {
+        font-size: 1.2rem;
+    }
+
+    .despacho__article-section-titulo {
+        font-size: 1.9rem;
+
+    }
+
+    .despacho__article-section-lista-item-titulo {
+        font-size: 1.8rem;
+
+    }
+
+    .despacho__article-footer-parrafo {
+
+        font-size: 1.3rem;
+
+    }
+
+    .despacho__article-section-lista-parrafo {
+        font-size: 1.3rem;
+
+    }
+
+    .despacho__aside {
+        width: 75%;
+        margin: 0 auto;
+        padding: 2rem 0;
+    }
+
+    .despacho__article-footer-info {
+        flex-direction: row;
+        gap: 1rem;
+    }
+
+    .despacho__article-footer-info-img {
+        width: 70px;
+        height: 70px;
+    }
+
+}
+
+
+@media(min-width:1024px) {
+    .despacho__contenedor-grid {
+        width: 70%;
+        margin: 0 auto;
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: 65% 35%;
+    }
+
+    .despacho__article {
+        width: 100%;
+
+    }
+
+    .despacho__aside {
+        width: 100%;
+        padding: 0;
+    }
+
+    .despacho__formulario {
+        width: 100%;
+    }
+
+    .despacho__breadcrumbs {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .despacho__breadcrumbs-lista {
+        width: 100%;
+    }
 }
