--- a/DWC/Practica6.02/style.css
+++ b/DWC/Practica6.02/style.css
@@ -158,3 +158,9 @@ button:hover {
     color: white;
     font-size: 0.9rem;
 }
+
+.listas-comprobación {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
