--- a/DIW/Practica3/css/style.css
+++ b/DIW/Practica3/css/style.css
@@ -177,10 +177,12 @@ body {
     justify-content: center;
 
 
-    img {
-        width: 100%;
-        height: 100%;
-    }
+
+}
+
+.footer__nav-social__lista-img {
+    width: 100%;
+    height: 100%;
 }
 
 .footer__nav-legal__item {
@@ -390,9 +392,11 @@ body {
     font-weight: 700;
     color: var(--color-enlace-texto);
 
-    span {
-        font-weight: 400;
-    }
+
+}
+
+.section-articulos__articulo-span {
+    font-weight: 400;
 }
 
 .section-articulos__articulo__parrafo-info,
@@ -568,9 +572,11 @@ body {
     font-size: 1rem;
     font-weight: 100;
 
-    cite {
-        font-weight: 700;
-    }
+
+}
+
+.cine-section__articulo-figcaption-h2 cite {
+    font-weight: 700;
 }
 
 .cine-section__titulo {
@@ -639,9 +645,11 @@ body {
     flex-direction: column;
     gap: 1.2rem;
 
-    img {
-        width: 100%;
-    }
+
+}
+
+.despacho__article-header__figure>img {
+    width: 100%;
 }
 
 .despacho__article-header__figcaption {
@@ -692,8 +700,7 @@ body {
 }
 
 .despacho__article-section-parrafo-lista-parrafo a:hover {
-    color: var(---color-hover-enlace-texto);
-
+    color: var(--color-hover-enlace-texto);
 }
 
 .despacho__article-footer {
